# schedar

./: .gitignore  Cargo.toml  TODO.txt  build.rs
shaders/: debug_texture.frag  debug_texture.vert  light.frag  light.vert  light_split_add.frag  light_split_base.frag  post_process.frag  post_process.vert  shader.wgsl  shadow_depth.frag  shadow_depth.vert
src/: camera.rs  common.rs  debug_texture_target.rs  error.rs  geometry.rs  main.rs  mesh.rs  post_process_target.rs  primitives.rs  render.rs  shader.wgsl  shadow_target.rs  texture.rs  transforms.rs  utils.rs  vertex_data.rs
