[package]
name = "schedar"
version = "0.1.0"
edition = "2021"


[dependencies]
if_chain = "1.0.2"
wgpu = "0.16"
cgmath = { git = "https://github.com/rustgd/cgmath" }
env_logger = "0.10"
futures = "0.3"
image = "0.24"
log = "0.4"
pollster = "0.3"
winit = "0.28"
anyhow = "1.0"
bytemuck = { version = "1.4", features = ["derive"] }
thiserror = "1.0.40"
tobj = "4.0.0"
itertools = "0.10.5"
smaa = "0.10.0"

[features]
default = ["cgmath/bytemuck"]