[package]
name = "schedar"
version = "0.1.0"
edition = "2021"


[dependencies]
wgpu = "0.17.0"
glam = { version = "0.24.1", features = ["bytemuck"] }
bytemuck = { version = "1.4", features = ["derive"] }
encase = { version = "0.6.1", features = ["glam"] }
smaa = { git = "https://github.com/fintelia/smaa-rs" }
if_chain = "1.0.2"
num = "0.4.0"
futures = "0.3"
image = "0.24"
log = "0.4"
pollster = "0.3"
winit = "0.28"
anyhow = "1.0"
thiserror = "1.0.40"
tobj = "4.0.0"
itertools = "0.11.0"
rand = "0.8.5"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"

[features]
default = ["glam/bytemuck"]

